# sort-by-planes

./: CMakeLists.txt  README.md  main.cpp
include/: operations.hpp  plane.hpp  point.hpp  solution.hpp
src/: operations.cpp  solution.cpp
test/: CMakeLists.txt  test.cpp
visualizer/: main.py
